--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+//@import '~svg-spritemap-webpack-plugin/sprite.scss';
+
 $width: 940px;
 $color: #465993;
 $Arial: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -78,6 +80,7 @@ html, body {
       &__container-player {
         width: 700px;
         height: 525px;
+        border-radius: $borderRadius;
         background-color: black;
       }
 
@@ -164,21 +167,63 @@ html, body {
     }
 
     .container-footer {
+      @include flex-box(column, center, center);
+
       width: $width;
+      padding-top: 52px;
 
-      &__title {
+      .container-title {
+        @include flex-box(row, space-between, center);
 
+        width: 100%;
+
+        &__title {
+          @include ubuntu-font(24px);
+          font-family: "Ubuntu", sans-serif;
+          font-size: 24px;
+          font-weight: bold;
+          font-style: italic;
+          text-transform: uppercase;
+          color: $color;
+          white-space: nowrap;
+          padding-right: 22px;
+        }
+
+        &__border {
+          width: 100%;
+          height: 1px;
+          background: #d0d8ef;
+          margin-top: 30px;
+          margin-bottom: 30px;
+        }
       }
 
       &__container-videos {
+        @include flex-box(row, space-between, center);
+
+        width: 100%;
 
         .container-video {
+          @include flex-box(column, space-between, center);
+
+          width: 220px;
 
           &__player {
-
+            width: 220px;
+            height: 165px;
+            border-radius: $borderRadius;
+            background-color: black;
           }
 
           &__title {
+            @include arial-font(14px);
+
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            width: 100%;
+
+            margin-top: 14px;
           }
         }
       }
