--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+@import '~svg-spritemap-webpack-plugin/_sprites';
 @import 'social-icon';
 
 $width: 940px;
@@ -32,6 +33,7 @@ $borderRadius: 5px;
 html, body {
   box-sizing: border-box;
   background: #ffffff;
+  cursor: default;
 
   #container {
     width: 1020px;
@@ -67,6 +69,11 @@ html, body {
       }
 
       &__close {
+        display: block;
+        width: 12px;
+        height: 12px;
+        cursor: pointer;
+        @include sprite('close');
       }
     }
 
