--- a/src/components/DownloadDropDown/DownloadDropDown.scss
+++ b/src/components/DownloadDropDown/DownloadDropDown.scss
@@ -1,6 +1,6 @@
-@import '../../node_modules/svg-spritemap-webpack-plugin/sprites';
-@import '_vars';
-@import '_mixins';
+@import '../../../node_modules/svg-spritemap-webpack-plugin/sprites';
+@import '../../styles/_vars';
+@import '../../styles/_mixins';
 
 .download {
   cursor: pointer;
