--- a/src/components/Favorites/Favorites.scss
+++ b/src/components/Favorites/Favorites.scss
@@ -1,6 +1,6 @@
-@import '../../node_modules/svg-spritemap-webpack-plugin/sprites';
-@import '_vars';
-@import '_mixins';
+@import '../../../node_modules/svg-spritemap-webpack-plugin/sprites';
+@import '../../styles/_vars';
+@import '../../styles/_mixins';
 
 .favorites {
   @include flex-box(row, space-between, center);
