--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -12,6 +12,12 @@
 
   border-radius: $borderRadius;
 
+  opacity: 1;
+
+  &.hidden {
+    display: none;
+  }
+
   .wrapper {
     @include flex-box(row, center, center);
   }
