add data for footer

--- a/src/styles/__social-icon.scss
+++ b/src/styles/__social-icon.scss
@@ -9,7 +9,7 @@
   border-radius: 50%;
   cursor: pointer;
 
-  &.tumblr {
+  &.twitter {
     &:after {
       @include icon(7px, 11px);
       @include sprite('tumblr');
