--- a/src/containers/Player/Player.scss
+++ b/src/containers/Player/Player.scss
@@ -46,6 +46,8 @@
         height: 2px;
         border-radius: 0;
         background-color: rgba($color, 0.3);
+        box-shadow: none !important;
+
 
         &__handle {
           box-shadow: none;
@@ -56,8 +58,11 @@
           }
         }
 
-        .& &__fill {
+        .rangeslider__fill {
           background-color: $color;
+        }
+
+        & &__fill {
           box-shadow: none;
           border-radius: 0;
         }
