--- a/src/containers/Player/Player.scss
+++ b/src/containers/Player/Player.scss
@@ -9,7 +9,7 @@
     width: 700px !important;
     height: 525px !important;
     border-radius: $borderRadius;
-    background-color: black;
+    background-color: $highColor;
   }
 
   &-controls {
